Fix for bug#40054: 'check table .. for upgrade' doesn't detect collation change made in 6.0.{1, 6}

Problem: 'CHECK TABLE ... FOR UPGRADE' did not check for
incompatible collation changes made in MySQL 6.0.1 and 6.0.6.

Fix: add the check.